HDDS-13133: Improve Ratis event recording in SCM and OM
Change-Id: I0a3755dab3744a08f477aa5943df51ae01813465